hphp/test/zend/good/Zend/tests/errmsg_035.php.expectf

Fatal error: Undefined interface: self in %s/errmsg_035.php on line 3
